--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,3 +1,4 @@
+// Font
 @font-face {
   font-family: 'Nunito';
   src: url('/fonts/Nunito-Regular.woff') format('woff');
@@ -7,3 +8,11 @@
 }
 
 $font-family: 'Nunito', 'Helvetica', 'Arial', 'sans-serif';
+$font-size--base: 1rem;
+$font-size--small: 0.85rem;
+$font-size--smallest: 0.7rem;
+
+// Layout
+$content-width: 50rem;
+$footer-height: 10rem;
+$item-padding: 0.1rem;
